--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
 
   <div ng-app="recipeApp" ng-view></div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.min.js"></script>
+  <script src="lib/jquery/2.1.4/jquery.min.js"></script>
+  <script src="lib/angular/1.4.8/angular.min.js"></script>
+  <script src="lib/angular/1.4.8/angular-route.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers/HomeCtrl.js"></script>
 </body>
