--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,6 @@
   <script src="lib/angular/1.4.8/angular-route.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers/HomeCtrl.js"></script>
-  <script src="js/directives/recipes.js"></script>
+  <script src="js/directives/recipe.js"></script>
 </body>
 </html>
