--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Recipes</title>
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="styles/css.css" media="screen, projection" rel="stylesheet" type="text/css"/>
+  
 </head>
 <body>
 
