--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Recipes</title>
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="styles/css.css" media="screen, projection" rel="stylesheet" type="text/css"/>
+  <link href="styles/css/app.css" media="screen, projection" rel="stylesheet" type="text/css"/>
   
 </head>
 <body>
