--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
   <title>Recipes</title>
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="styles/css/app.css" media="screen, projection" rel="stylesheet" type="text/css"/>
   
 </head>
