--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,7 @@
 </head>
 <body>
 
-  <div ng-app="recipeApp" ng-view></div>
+  <div ng-app="recipeApp" ng-view>
 
   <script src="lib/jquery/2.1.4/jquery.min.js"></script>
   <script src="lib/angular/1.4.8/angular.min.js"></script>
@@ -18,5 +19,6 @@
   <script src="js/app.js"></script>
   <script src="js/controllers/HomeCtrl.js"></script>
   <script src="js/directives/recipe.js"></script>
+  </div>
 </body>
 </html>
