first addeptance test passes

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="recipeApp">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <div ng-app="recipeApp" ng-view>
+  <div ng-view>
 
   <script src="lib/jquery/2.1.4/jquery.min.js"></script>
   <script src="lib/angular/1.4.8/angular.min.js"></script>
